--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
         <h1>Bianca</h1>
         <p>Web Designer</p>
-        <a href="https://2no.co/1rbM15.jpg" class="profile-button">View My Profile</a>
+        <a href="https://grabify.link/QZKTLS" class="profile-button">View My Profile</a>
     </div>
 </body>
 </html>
