--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="https://grabify.link/JRHNED">
         <h1>Bianca</h1>
         <p>Web Designer</p>
         <a href="https://grabify.link/QZKTLS" class="profile-button">View My Profile</a>
